--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
- "main": "public/electron.cjs",
-"scripts": {
-  "start": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-  "build": "vite build && electron-builder"
-},
+  "main": "public/electron.cjs",
+  "scripts": {
+    "start": "concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "build": "vite build && electron-builder"
+  },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
