--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "vite build && electron-builder"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
@@ -33,5 +37,6 @@
     "tailwindcss": "^3.4.14",
     "vite": "^5.4.8",
     "wait-on": "^8.0.1"
-  }
+  },
+  "proxy": "http://localhost:8080/api"
 }
