--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.7",
+    "@mui/x-data-grid": "^7.22.2",
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
